--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.26.2",
     "@clerk/themes": "^1.7.9",
-    "@prisma/client": "5.5.2",
+    "@prisma/client": "5.6.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -27,6 +27,7 @@
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.41.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
@@ -34,6 +35,7 @@
     "eslint-config-next": "14.0.1",
     "lucide-react": "^0.279.0",
     "next": "14.0.1",
+    "next-cloudinary": "^5.6.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
