--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "20.6.4",
     "@types/react": "18.2.35",
     "@types/react-dom": "18.2.14",
+    "apexcharts": "^3.44.0",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.0",
@@ -40,6 +41,7 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
